feat: update variable declarations to explicit types in tests and refactor heartbeat sending to use ExecutorService