@@ -18,6 +18,8 @@ import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 import org.springframework.context.annotation.Import;
 
 import java.util.List;
+import java.util.Map;
+import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -106,7 +108,7 @@ class ContentTagRepositoryImplTest {
             contentTagRepository.saveAll(content1.getId(), List.of(tagSf, tagAction));
             contentTagRepository.saveAll(content2.getId(), List.of(tagAction, tagDrama));
 
-            var result = contentTagRepository.findTagsByContentIds(
+            Map<UUID, List<TagModel>> result = contentTagRepository.findTagsByContentIds(
                 List.of(content1.getId(), content2.getId())
             );
 
@@ -122,7 +124,7 @@ class ContentTagRepositoryImplTest {
         @Test
         @DisplayName("null을 입력하면 빈 Map을 반환한다")
         void findTagsByContentIds_nullInput_returnsEmptyMap() {
-            var result = contentTagRepository.findTagsByContentIds(null);
+            Map<UUID, List<TagModel>> result = contentTagRepository.findTagsByContentIds(null);
 
             assertThat(result).isEmpty();
         }
@@ -130,7 +132,7 @@ class ContentTagRepositoryImplTest {
         @Test
         @DisplayName("빈 리스트를 입력하면 빈 Map을 반환한다")
         void findTagsByContentIds_emptyList_returnsEmptyMap() {
-            var result = contentTagRepository.findTagsByContentIds(List.of());
+            Map<UUID, List<TagModel>> result = contentTagRepository.findTagsByContentIds(List.of());
 
             assertThat(result).isEmpty();
         }
@@ -148,7 +150,7 @@ class ContentTagRepositoryImplTest {
             TagModel tag = tagRepository.save(TagModel.create("SF"));
             contentTagRepository.saveAll(contentWithTags.getId(), List.of(tag));
 
-            var result = contentTagRepository.findTagsByContentIds(
+            Map<UUID, List<TagModel>> result = contentTagRepository.findTagsByContentIds(
                 List.of(contentWithTags.getId(), contentWithoutTags.getId())
             );
 
@@ -216,7 +218,7 @@ class ContentTagRepositoryImplTest {
             List<ContentTagEntity> remaining = jpaContentTagRepository.findAll();
 
             assertThat(remaining).hasSize(1);
-            assertThat(remaining.get(0).getContent().getId())
+            assertThat(remaining.getFirst().getContent().getId())
                 .isEqualTo(content2.getId());
         }
 
